[package]
name = "api-dnsmasq-dynconf"
version = "0.1.0"
authors = ["42Pollux <mbuelow42@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dnsmasq-dynconf"
path = "src/main.rs"

[build]
target = "armv7-unknown-linux-gnueabihf"

[dependencies]
regex = "1"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
nix = "0.19.1"
daemonize = "0.4.1"