[package]
name = "api-dnsmasq-dynconf"
version = "0.1.0"
authors = ["42Pollux <mbuelow42@protonmail.com>"]
edition = "2018"

[[bin]]
name = "dnsmdcd"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 's'
panic = 'abort'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
actix-web = "3"
daemonize = "0.4.1"
nix = "0.19.1"